[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/Screens/GameOverScreen/GameoverScreen.gd" type="Script" id=1]
[ext_resource path="res://Resources/Fonts/coffin_stone/coffinstoneexpandital.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Resources/Sprites/MainScreenButtons/start_hell.png" type="Texture" id=3]
[ext_resource path="res://Resources/Sprites/MainScreenButtons/quit_hell.png" type="Texture" id=4]
[ext_resource path="res://Resources/Sprites/MainScreenButtons/quit_pressed.png" type="Texture" id=5]
[ext_resource path="res://Resources/Sprites/MainScreenButtons/start_pressed.png" type="Texture" id=6]
[ext_resource path="res://Resources/Fonts/coffin_stone/coffinstonerotate.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Resources/Fonts/coffin_stone/coffinstonerotal.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Resources/Sprites/MainScreenButtons/save.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 55
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
use_mipmaps = true
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 8 )

[node name="Gameover_Screen" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 800.0
margin_bottom = 600.0
rect_scale = Vector2( 1.5117, 1.34578 )
color = Color( 0, 0, 0, 0.239216 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 389.78
margin_top = 180.923
margin_right = 1250.78
margin_bottom = 652.923
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0.254902, 0.0117647, 0.0117647, 1 )
text = "Game Over"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 159.78
margin_top = 421.923
margin_right = 959.78
margin_bottom = 652.923
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_right = 800.0
margin_bottom = 338.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
margin_left = 85.0
margin_right = 714.0
margin_bottom = 338.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="start" type="TextureButton" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_right = 629.0
margin_bottom = 73.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 6 )

[node name="save" type="TextureButton" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 77.0
margin_right = 629.0
margin_bottom = 255.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 6 )

[node name="quit" type="TextureButton" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 259.0
margin_right = 629.0
margin_bottom = 338.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )

[node name="dead_zombie_text" type="RichTextLabel" parent="."]
margin_left = 419.78
margin_top = 239.923
margin_right = 938.78
margin_bottom = 292.923
rect_scale = Vector2( 0.914287, 1.0144 )
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.615686, 0, 0, 1 )
text = "dead zombi :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dead_zombie_counter" type="RichTextLabel" parent="dead_zombie_text"]
margin_left = 176.0
margin_right = 528.0
margin_bottom = 40.0
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.615686, 0, 0, 1 )
bbcode_text = "0"
text = "0"

[node name="Coin" type="RichTextLabel" parent="."]
margin_left = 419.78
margin_top = 282.923
margin_right = 952.78
margin_bottom = 335.923
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 1, 0.843137, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.458824, 0, 0, 1 )
text = "Gold :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coin_count" type="RichTextLabel" parent="Coin"]
margin_left = 87.0
margin_right = 545.0
margin_bottom = 33.0
rect_scale = Vector2( 0.984477, 1.02283 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 1, 0.843137, 0, 1 )
custom_colors/font_color_shadow = Color( 0.458824, 0, 0, 1 )
tab_size = 8
text = "0"
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
